AC_PREREQ(2.59)

m4_include(version.m4)

AC_INIT([PRODUCT_NAME], [PRODUCT_VERSION], [PRODUCT_BUGREPORT], [PRODUCT_NAME], [PRODUCT_URL])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AM_PROG_AR
#

AC_CONFIG_MACRO_DIR([m4])

#

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

#

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

#

AC_CONFIG_HEADERS([config.h])

#

AM_PATH_PYTHON(,, [:])
AM_CONDITIONAL([HAVE_PYTHON], [test "$PYTHON" != :])
AC_CHECK_LIB(python$PYTHON_VERSION, Py_Initialize)
PYTHON_CFLAGS=`python$PYTHON_VERSION-config --cflags`
PYTHON_LDFLAGS=`python$PYTHON_VERSION-config --ldflags`

AC_SUBST(PYTHON_CFLAGS)
AC_SUBST(PYTHON_LDFLAGS)

#

AC_CONFIG_FILES([
 Makefile
])
AC_OUTPUT

